--- a/css/style.css
+++ b/css/style.css
@@ -267,10 +267,6 @@ ul {
   margin-bottom: 15px;
 }
 
-.scale-card__description {
-  color: #222;
-}
-
 /* Code */
 
 .code {
@@ -290,6 +286,68 @@ ul {
 }
 
 /* Works */
+
+.works__list {
+  display: flex;
+  justify-content: center;
+  column-gap: 60px;
+}
+
+.works__item {
+  position: relative;
+  display: block;
+  margin: 0 2px;
+  padding: 1rem 1.5rem;
+  overflow: hidden;
+}
+
+.works__link {
+  font-size: 1.8rem;
+  line-height: 2.7rem;
+  color: #222;
+}
+
+.works__link::before {
+  box-sizing: border-box;
+  transform: translateX(100%);
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 99.5%;
+  height: 2px;
+  border-bottom: 2px solid transparent;
+  border-left: 2px solid transparent;
+  border-radius: 10px;
+}
+
+.works__link::after {
+  box-sizing: border-box;
+  transform: translateX(-100%);
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 99.5%;
+  height: 2px;
+  border-top: 2px solid transparent;
+  border-right: 2px solid transparent;
+  border-radius: 10px;
+}
+
+.works__link:hover::before {
+  transition: 0.1s transform linear, 0.1s height linear 0.1s;
+  transform: translateX(0);
+  height: 100%;
+  border-color: #ff6464;
+}
+
+.works__link:hover::after {
+  transition: 0.1s transform linear 0.2s, 0.1s height linear 0.3s;
+  transform: translateX(0);
+  height: 100%;
+  border-color: #ff6464;
+}
 
 /* Education */
 
@@ -350,7 +408,7 @@ ul {
 }
 
 .languages__text {
-  font-style: 1.8rem;
+  font-size: 1.8rem;
   font-weight: 500;
   color: #222;
 }
@@ -358,15 +416,11 @@ ul {
 /* Footer */
 
 .footer__container {
-  padding: 10px 0;
-  text-align: center;
-}
-
-.footer__wrapper {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
   align-items: center;
+  padding: 10px 0;
 }
 
 .contacts__list {
